--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,10 +23,16 @@
                         <div class="rect r3"></div>
                     </div>
                 </div>
-                <div class="col-md-6 order-md-2 order-1 align-self-center">
+                <div class="col-md-6 order-md-2 order-1 align-self-center p-1">
                     <div class="heading text-center text-md-left">
                         <h1 class="oswald-heading">TopAnimeApi</h1>
-                        <p class="roboto-regular">TopAnimeApi is an open-source REST API for the <em><strong>List of top ranking anime and their details</strong></em>.</p>
+                        <p class="p mt-4 roboto-regular">TopAnimeApi is an open-source REST API for the <em><strong>List of top ranking anime and their details</strong></em>.
+                            TopAnimeAPI is your one-stop destination for accessing comprehensive rankings and detailed information on the top anime series. <br> Whether you're an avid anime fan, a developer working on a personal project,TopAnimeAPI offers the tools and resources you need to explore, discover, and utilize anime data in innovative ways.
+                        </p>
+                    </div>
+                    <div class="d-flex justify-content-start mt-3 p-1">
+                        <a href="#"><button class="btn primary">Learn More</button></a>
+                        <a href="#"><button class="btn secondary ml-2">Get Started</button></a>
                     </div>
                 </div>
             </div>
