--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
               <img src="/logo-transparent-png.png" alt="topAnimeLogo" class="logo">
           </div>
      </nav>
-     <main>
+     <main >
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6 order-md-1 order-2 box1 align-content-center">
@@ -31,14 +31,81 @@
                         </p>
                     </div>
                     <div class="d-flex justify-content-start mt-3 p-1">
-                        <a href="#"><button class="btn primary">Learn More</button></a>
-                        <a href="#"><button class="btn secondary ml-2">Get Started</button></a>
+                        <a href="https://github.com/nirajan128/topAnimeAPI" target="_blank"><button class="btn primary">Learn More</button></a>
+                        <a href="#get-started"><button class="btn secondary ml-2">Get Started</button></a>
                     </div>
                 </div>
             </div>
         </div>
-        
+        <div class="conatiner2 p-3 mt-5 mr-5  ml-5" id="get-started">
+            <div class="info">
+                <div class="info-heading">
+                    <h2 class="oswald-heading">Documentations</h2>
+                </div>
+                <div class="info-content roboto-regular">
+                    <p>A free,fast, and clean REST API which thats easy to use.The API returns the data in <b>JSON format</b> </p>
+                    <p>Base URL: <a href="https://topanime-api-050cfa577b7c.herokuapp.com/">https://topanime-api-050cfa577b7c.herokuapp.com/</a></p>
+                </div>
+            </div>
+            <div class="table-content">
+                <table class=" table table-light table-striped table-hover table-extra the-table overflow-hidden">
+                    <thead>
+                     <tr>
+                       <th scope="col">Method</th>
+                       <th scope="col">URL</th>
+                       <th scope="col">Returns</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">GET</th>
+                        <td>baseURL/anime</td>
+                        <td>All anime details in the database</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">GET</th>
+                        <td>baseURL/anime/random</td>
+                        <td>Random anime each time</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">GET</th>
+                        <td>baseURL/anime/search?q='animename'</td>
+                        <td>searched anime which is eneterd in query parameter <br>
+                            example: baserURL/anime/search/?q=gintama returns all anime with name gintama
+                        </td>
+                        
+                    </tr>
+                </tbody>
+                </table>
+            </div>
+        </div>
      </main>
+     <footer class=" p-3 mt-1 mr-5 ml-5" id="learn-more">
+        <div class="contact d-flex flex-column flex-sm-row">
+            <div class="c_content p-3">
+                <p class="roboto-regular">This API is something I built using Node.js, npm packages, and PostgreSQL. ,<br>The data is hosted on <a href="https://render.com/">Render</a>
+                and the app it self is hosted on <a href="https://heroku.com/">Heroku</a>.</p>
+                <p class="roboto-regular">For further enquires mail me at <a href="mailTo:nirajanshrestha672@gmail.com"><em>nirajanshrestha672@gmail.com</em></a></p>
+            </div>
+            <div class="c_icons flex-grow-1 d-flex flex-column align-items-center justify-content-center">
+                <div class="c_heading ">
+                    <h2 class="oswald-heading">Connect</h2>
+                </div>
+                <div class="c_logo">
+                   <a href="https://github.com/nirajan128" target="_blank"><img src="/github.png" alt="github" class="f_animation"></a>
+                   <a href="www.linkedin.com/in/nirajan-shrestha-391380233" target="_blank"><img src="/linked-in.png" alt="linkedin" class="f_animation"></a>
+                </div>
+                
+                
+            </div>
+        </div>
+        <div class="copyright border-top mt-5 text-center">
+            <p class="roboto-regular p-2">&copy; 2024 TopAnimeAPI. All rights reserved. <br>
+                <a href="www.linkedin.com/in/nirajan-shrestha-391380233">&copy; NirajanShrestha.</a>
+            </p>
+            
+        </div>
+     </footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>  
 </body>
