Updated hosting link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
                 </div>
                 <div class="info-content roboto-regular">
                     <p>A free,fast, and clean REST API which thats easy to use.The API returns the data in <b>JSON format</b> </p>
-                    <p>Base URL: <a href="https://topanime-api-050cfa577b7c.herokuapp.com/">https://topanime-api-050cfa577b7c.herokuapp.com/</a></p>
+                    <p>Base URL: <a href="https://topanimeapi.onrender.com">https://topanimeapi.onrender.com</a></p>
                 </div>
             </div>
             <div class="table-content">
@@ -84,7 +84,7 @@
         <div class="contact d-flex flex-column flex-sm-row">
             <div class="c_content p-3">
                 <p class="roboto-regular">This API is something I built using Node.js, npm packages, and PostgreSQL. ,<br>The data is hosted on <a href="https://render.com/">Render</a>
-                and the app it self is hosted on <a href="https://heroku.com/">Heroku</a>.</p>
+                and the app it self is hosted on <a href="https://Render.com/">Render</a>.</p>
                 <p class="roboto-regular">For further enquires mail me at <a href="mailTo:nirajanshrestha672@gmail.com"><em>nirajanshrestha672@gmail.com</em></a></p>
             </div>
             <div class="c_icons flex-grow-1 d-flex flex-column align-items-center justify-content-center">
